--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+    background:#000;
+}
 #canvas-container {
     width: 850px;
     margin: auto;
@@ -6,4 +9,22 @@
 canvas {
     display: inline;
 
+}
+div#score-and-lvl {
+    margin:0 auto;
+    width:800px;
+}
+div#score-and-lvl p {
+    display: inline-block;
+    color:#0067FF;
+}
+p#lvl {
+    float:right;
+}
+p#lvl:after {
+    content: "";
+	display: block;
+	clear: both;
+	zoom: 1;
+	height: 0;
 }
