--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,14 @@ div#menu {
 div#menu a {
     font-size: 2rem;
     text-decoration: none;
+    color:green;
+    border:1px solid green;
+    padding:5px;
 
+}
+div#menu a:hover {
+    color:red;
+    border: 1px solid red;
 }
 div#score, div#lvl{
     display: inline-block;
