--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ div#menu a:hover {
     color:red;
     border: 1px solid red;
 }
+/*MENU END*/
 div#score, div#lvl{
     display: inline-block;
     color:#0067FF;
