add end game menu

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,38 @@ div#menu a:hover {
     border: 1px solid red;
 }
 /*MENU END*/
+/*END Game*/
+div#end-game {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    height: auto;
+    overflow: auto;
+    width: 100%;
+    background:#000;
+    text-align :center ;
+    color:#0067FF;
+}
+
+div#end-game a {
+    font-size: 2rem;
+    text-decoration: none;
+    color:green;
+    border:1px solid green;
+    padding:5px;
+
+}
+
+div#end-game a:hover {
+    color:red;
+    border: 1px solid red;
+}
+/*END Game*/
+
 #info,#points, #lvl, #lives{
     display: inline-block;
     color:#0067FF;
