--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ div#end-game a {
     color:green;
     border:1px solid green;
     padding:5px;
-
 }
 
 div#end-game a:hover {
@@ -75,10 +74,10 @@ div#end-game a:hover {
 }
 /*END Game*/
 
-#info,#points, #lvl, #lives, #bullets{
+.info,.points, #lvl, .lives, .bullets{
     display: inline-block;
     color:#0067FF;
-    width:10%;
+    width:20%;
     vertical-align :top;
     text-align :center;
 }
